--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/vercel": "^8.1.4",
     "@astrojs/vue": "^5.0.13",
     "astro": "^5.7.12",
+    "lenis": "^1.3.3",
     "vue": "^3.5.13"
   },
   "devDependencies": {
